fix(ci): Missing checkout step

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,6 +22,7 @@ jobs:
   denocheck:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: denoland/setup-deno@v1
         with:
           deno-version: "vx.x.x"
