chores: Generate lcov instead of stdout results

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -9,6 +9,6 @@
     "test": "deno test --allow-read=. --allow-env",
     "lint": "deno lint",
     "check": "deno task fmt --check && deno task lint",
-    "coverage": "deno task test --coverage=coverage && deno coverage coverage"
+    "coverage": "deno task test --coverage=coverage && deno coverage coverage --lcov --output=coverage.lcov"
   }
 }
