chores: Improved CI trigguers

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,5 +1,11 @@
 name: Check changes
-on: [ push, pull_request ]
+on: 
+  push:
+    branches:
+      - "*"
+  pull_request:
+    branches:
+      - "master"
 jobs:
   denotest:
     runs-on: ubuntu-latest
