--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,5 +1,5 @@
 name: Check changes
-on: 
+on:
   push:
     branches:
       - "*"
@@ -7,6 +7,7 @@ on:
     branches:
       - "master"
 jobs:
+  
   denotest:
     runs-on: ubuntu-latest
     strategy:
@@ -25,6 +26,7 @@ jobs:
           key: ${{ runner.os }}-deno-${{ hashFiles('**/deps.ts') }}
       - name: Run tests
         run: deno task test
+  
   denocheck:
     runs-on: ubuntu-latest
     steps:
@@ -34,3 +36,32 @@ jobs:
           deno-version: "vx.x.x"
       - name: Run format and lint checks
         run: deno task check
+  
+  denocov:
+    runs-on: ubuntu-latest
+    needs: [ "denotest", "denocheck" ]
+    steps:
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: "1.23.X"
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.deno
+            ~/.cache/deno
+          key: ${{ runner.os }}-deno-${{ hashFiles('**/deps.ts') }}
+      - name: Run tests
+        run: deno task coverage
+      - name: Upload lcov file
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-lcov
+          path: "*.lcov"
+      - name: Report code coverage
+        uses: zgosalvez/github-actions-report-lcov@v1
+        with:
+          coverage-files: coverage.lcov
+          minimum-coverage: 75
+          artifact-name: code-coverage-report
+          github-token: ${{ secrets.GITHUB_TOKEN }}
